# solo_user

./: .env  Cargo.toml  README.md  api_test.http  config.toml  schema_mysql.sql
src/: auth.rs  config.rs  handler.rs  jwt.rs  main.rs  model.rs  server.rs  service.rs
src/server/: mod.rs
