[package]
name = "solo_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.24" } 
clap = {version = "4.2.1" , features = ["derive"] } 
log = {version = "0.4.17" }
env_logger = {version = "0.10.0" }
serde = {version = "1.0.160" , features = ["derive"] }
toml = {version = "0.7.3" }
actix-web = {version = "4.3.1" }