[package]
name = "solo_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = {version = "0.23.0" } 
clap = {version = "4.2.1" , features = ["derive"] } 
log = {version = "0.4.17" }
env_logger = {version = "0.10.0" }
serde = {version = "1.0.160" , features = ["derive"] }
serde_json = {version = "1.0.95" }
toml = {version = "0.7.3" }
actix-web = {version = "4.3.1"}
reqwest = {version = "0.11.16" }
argon2 = {version = "0.5.0" }
jsonwebtoken = {version = "8.3.0" }
rand_core = {version = "0.6.4", features = ["std"] }
chrono = {version = "0.4.24", features = ["serde"] }
sqlx = {version = "0.7.1", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
uuid = {version = "1.2.2", features = ["serde", "v4"] }
bcrypt = {version = "0.15.0" }
oauth2 = {version = "4.3.0"}
url = {version = "2.3.1"}